--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -12,3 +12,16 @@ body{
     background-color: #FAF9F6;
     color: #222;
 }
+
+body, html {
+    height: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+#root {
+    display: flex;
+    flex-direction: column;
+    min-height: 100dvh;
+}
