--- a/Frontend/src/components/css/Footer.css
+++ b/Frontend/src/components/css/Footer.css
@@ -1,8 +1,8 @@
-#footer{
+#footer {
     background-color: #333;
     color: white;
     text-align: center;
     padding: 10px;
-    bottom: 0;
+    margin-top: auto;
     width: 100%;
 }
