--- a/Frontend/src/components/css/Dashboard.css
+++ b/Frontend/src/components/css/Dashboard.css
@@ -3,9 +3,9 @@
     padding-top: 0;
     flex: 1;
     margin: 0 auto;
-    width: 70dvw;
+    width: 1000px;
   }
-  
+
   .create-doc-btn {
     display: block;
     margin: 44px 0;
@@ -28,7 +28,7 @@
   
   .doc-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    grid-template-columns: repeat(auto-fill, 150px);
     gap: 20px;
   }
   
@@ -59,6 +59,7 @@
     color: #666;
     margin-bottom: 10px;
     padding: 0 12px;
+    overflow: hidden;
   }
   .doc-card-footer {
     display: flex;
@@ -92,9 +93,10 @@
     border: 1px solid #ddd;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    padding: 10px;
+    padding: 12px;
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
     gap: 5px;
   }
   
@@ -104,4 +106,29 @@
     cursor: pointer;
     font-size: 14px;
     color: #333;
+  }
+
+
+  @media (max-width: 1300px) {
+    .dashboard {
+      width: 830px;
+    }
+  }
+
+  @media (max-width: 1100px) {
+    .dashboard {
+      width: 660px;
+    }
+  }
+
+  @media (max-width: 800px) {
+    .dashboard {
+      width: 490px;
+    }
+  }
+
+  @media (max-width: 600px) {
+    .dashboard {
+      width: 320px;
+    }
   }
