--- a/Frontend/src/components/css/Dashboard.css
+++ b/Frontend/src/components/css/Dashboard.css
@@ -38,6 +38,7 @@
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     padding: 20px;
+    height: 237.6px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
