--- a/Frontend/src/components/css/Document.css
+++ b/Frontend/src/components/css/Document.css
@@ -5,6 +5,7 @@
     padding:5px 20px;
     padding-right: 30px;
     background-color: #f6f6f6;
+    flex-wrap: wrap;
   }
   
   .menu-section {
@@ -46,7 +47,7 @@
     color: #333;
     border: 2px solid #333;
     border-radius: 5px;
-    padding: 5px 10px;
+    padding: 2px 10px;
     cursor: pointer;
     font-weight: 600;
     transition: all 0.2s;
@@ -76,6 +77,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    overflow-x: scroll;
 }
 
 .ql-toolbar.ql-snow {
@@ -86,6 +88,7 @@
     top: 0;
     z-index: 1;
     background-color: #f6f6f6;
+    flex-wrap: wrap;
 }
 
 @page {
