--- a/Frontend/src/components/css/CollaboratorSidebar.css
+++ b/Frontend/src/components/css/CollaboratorSidebar.css
@@ -83,3 +83,22 @@
   .remove-collaborator-btn:hover {
     color: rgb(227, 0, 0);
   }
+
+  .copy-link-btn{
+    padding: 10px 20px;
+    position: absolute;
+    bottom: 15px;
+    border: 2px solid #333;
+    background-color:transparent;
+    color: #333;
+    font-weight: 600;
+    border-radius: 4px;
+    width: 260px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+  }
+
+  .copy-link-btn:hover {
+    background-color: #333;
+    color: white;
+  }
