--- a/Frontend/src/components/css/Navbar.css
+++ b/Frontend/src/components/css/Navbar.css
@@ -7,7 +7,7 @@
     align-items: center;
     box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     margin-bottom: 5px;
-    
+    flex-wrap: wrap;
 }
 
 #icon-name{
