--- a/Frontend/src/components/css/Dashboard.css
+++ b/Frontend/src/components/css/Dashboard.css
@@ -52,9 +52,25 @@
     display: flex;
   flex-direction: column;
   justify-content: space-between;
+  position: relative;
   height: 100%;
   }
   
+  .shared-label{
+    color: #fff;
+    background-color: #666;
+    padding: 2px 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50px;
+    position: absolute;
+    top: -9px;
+    left: -9px;
+    font-size: 12px;
+    font-weight: 500;
+    z-index: 1;
+  }
   .doc-content-preview {
     font-size: 10px;
     color: #666;
